@@ -4947,3 +4947,4 @@ Changelog for GXemul:
 		making self-compilation of [an older version of] GXemul inside
 		OpenBSD/luna88k get further.
 20210209	Adding keyboard support to dev_luna88k.
+20210213	Implementing exception cases in 88K xmem_slow implementation.
